feat: update all

--- a/siswa/templates/data/kelas_delete.html
+++ b/siswa/templates/data/kelas_delete.html
@@ -6,16 +6,17 @@
 		 <div class="row justify-content-md-center">
 			 <div class="col-md-8">
 				 <div class="card card-body">
-					 <p> Are you sure want to delete "{{ formhapuswalisantri }}" ?</p>
+					 <p> Are you sure want to delete "{{ kelas }}" ?</p>
 						 <form action="" method="POST">
 							 {% csrf_token %}
 							 <br>
-							 <a class="btn btn-danger" href="{% url 'walisantri' %}" role="button">Cancel</a>
-						 <input type="submit" class="btn btn-primary" name="Confirm"/>
+							 <a class="btn btn-warning" href="{% url 'kelas' %}" role="button">Cancel</a>
+							 <button type="submit" class="btn btn-danger">Delete</button>
 					 </form>
 				 </div>
 			 </div>
 		 </div>
 	</div>
 </div>
+
 {% endblock content %}
