--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -17,8 +17,8 @@
       <li>
         <h4>
           <a
-            class="nav-link {% if menu == 'pengurus' %} active {% endif %}"
-            href="{% url 'pengurus' %}"
+            class="nav-link {% if menu == 'petugas' %} active {% endif %}"
+            href="{% url 'petugas' %}"
             aria-expanded="false"
           >
             <i class="icon-user menu-icon"></i
@@ -51,7 +51,7 @@
         </h4>
       </li>
     
-      <li>
+      <!-- <li>
         <h4>
           <a
             class="nav-link {% if menu == 'pelanggaran' %} active {% endif %}"
@@ -62,7 +62,7 @@
             ><span class="nav-text">Pelanggaran</span>
           </a>
         </h4>
-      </li>
+      </li> -->
       <li>
         <h4>
           <a
