--- a/siswa/templates/data/siswa.html
+++ b/siswa/templates/data/siswa.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %} {% load static %} {% block content %}
+{% extends "base.html" %} {% load widget_tweaks %} {% load static %} {% block content %}
 <style>
   tbody {
     overflow-y: 0;
@@ -9,7 +9,10 @@
     <div class="row">
       <div class="col-lg">
         <div class="card">
+        
           <div class="card-body">
+
+            
             <div class="card-title">
               <a
                 href="{% url 'create_siswa'  %}"
@@ -19,18 +22,20 @@
                 Tambah Siswa
               </a>
             </div>
-            <div class="col">
-              <div class="card card-body">
-                <form method="get">
-                  <div class="row">
-                    <div></div>
-                    <button class="btn btn-primary" type="submit">
-                      Search
-                    </button>
+
+            <form method="get">
+              <div class="row my-3">
+                <div class="col-4">
+                  {{ filter_siswa.form.nama| add_class:"form-control" }}
                   </div>
-                </form>
+               <div class="col-2">
+                <button class="btn btn-primary" type="submit">
+                  Search
+                </button>
+               </div>
               </div>
-            </div>
+            </form>
+         
             <div class="table-responsive">
               <table class="table">
                 <thead>
