--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -9,8 +9,8 @@
             href="{% url 'beranda' %}"
             aria-expanded="false"
           >
-            <i class="icon-speedometer menu-icon"></i
-            ><span class="nav-text">Home</span>
+          <i class="fa-solid fa-house"></i>
+            <span class="nav-text">Home</span>
           </a>
         </h4>
       </li>
@@ -21,8 +21,8 @@
             href="{% url 'petugas' %}"
             aria-expanded="false"
           >
-            <i class="icon-user menu-icon"></i
-            ><span class="nav-text">Petugas</span>
+          <i class="fa-solid fa-user"></i>
+          <span class="nav-text">Petugas</span>
           </a>
         </h4>
       </li>
@@ -33,8 +33,8 @@
             href="{% url 'kelas' %}"
             aria-expanded="false"
           >
-            <i class="icon-note menu-icon"></i
-            ><span class="nav-text">Data Kelas</span>
+          <i class="fa-solid fa-school"></i>
+          <span class="nav-text">Data Kelas</span>
           </a>
         </h4>
       </li>
@@ -45,24 +45,24 @@
             href="{% url 'siswa' %}"
             aria-expanded="false"
           >
-            <i class="icon-user menu-icon"></i
-            ><span class="nav-text">Data Siswa</span>
+            <i class="fa-solid fa-users"></i>
+            <span class="nav-text">Data Siswa</span>
           </a>
         </h4>
       </li>
     
-      <!-- <li>
+      <li>
         <h4>
           <a
-            class="nav-link {% if menu == 'pelanggaran' %} active {% endif %}"
-            href="{% url 'pelanggaran' %}"
+            class="nav-link {% if menu == 'pembayaran' %} active {% endif %}"
+            href="{% url 'pembayaran' %}"
             aria-expanded="false"
           >
-            <i class="icon-note menu-icon"></i
-            ><span class="nav-text">Pelanggaran</span>
+          <i class="fa-solid fa-money-bill"></i>
+            <span class="nav-text">Pembayaran</span>
           </a>
         </h4>
-      </li> -->
+      </li>
       <li>
         <h4>
           <a
@@ -70,8 +70,8 @@
             href="{% url 'laporan' %}"
             aria-expanded="false"
           >
-            <i class="icon-note menu-icon"></i
-            ><span class="nav-text">Laporan</span>
+          <i class="fa-solid fa-database"></i>  
+          <span class="nav-text">Laporan</span>
           </a>
         </h4>
       </li>
