--- a/siswa/templates/data/petugas.html
+++ b/siswa/templates/data/petugas.html
@@ -15,11 +15,11 @@
                 <div class="card">
                     <div class="card-body">
                         <div class="card-title">
-                            <a href="{% url 'create_petugas' %}" type="button" class="btn btn-rounded btn-outline-secondary icon-note menu-icon"> Tambah Petugas</a>
+                            <a href="{% url 'create_petugas' %}" type="button" class="btn btn-rounded btn-outline-secondary fa-fa fa-plus"> Tambah Petugas</a>
                         </div>
                       
                         <div class="table-responsive">
-                            <table class="table">
+                            <table id="data-tabel" class="table">
                                 <thead>
                                     <tr>                 
                                         <th>No</th>
