--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -63,6 +63,21 @@
           </a>
         </h4>
       </li>
+
+      <li>
+        <h4>
+          <a
+            class="nav-link {% if menu == 'rincian_pembayaran' %} active {% endif %}"
+            href="{% url 'rincian_pembayaran' %}"
+            aria-expanded="false"
+          >
+          <i class="fa-solid fa-money-bill"></i>
+            <span class="nav-text">Rincian Pembayaran</span>
+          </a>
+        </h4>
+      </li>
+
+
       <li>
         <h4>
           <a
