--- a/siswa/templates/data/beranda.html
+++ b/siswa/templates/data/beranda.html
@@ -5,37 +5,9 @@
       <div class="col-lg-3 col-sm-6">
         <div class="card gradient-1">
           <div class="card-body">
-            <h3 class="card-title text-white">Pelangaran Ringan</h3>
+            <h3 class="card-title text-white">Siswa</h3>
             <div class="d-inline-block">
-              <h1 class="text-white">{{ plnringan }}</h1>
-              <p class="text-white mb-0"></p>
-            </div>
-            <span class="float-right display-5 opacity-5"
-              ><i class="fa fa-shopping-cart"></i
-            ></span>
-          </div>
-        </div>
-      </div>
-      <div class="col-lg-3 col-sm-6">
-        <div class="card gradient-2">
-          <div class="card-body">
-            <h3 class="card-title text-white">Pelanggaran Sedang</h3>
-            <div class="d-inline-block">
-              <h1 class="text-white">{{ plnsedang }}</h1>
-              <p class="text-white mb-0"></p>
-            </div>
-            <span class="float-right display-5 opacity-5"
-              ><i class="fa fa-money"></i
-            ></span>
-          </div>
-        </div>
-      </div>
-      <div class="col-lg-3 col-sm-6">
-        <div class="card gradient-3">
-          <div class="card-body">
-            <h3 class="card-title text-white">Pelanggaran Berat</h3>
-            <div class="d-inline-block">
-              <h1 class="text-white">{{ plnberat }}</h1>
+              <h1 class="text-white">{{ siswa }}</h1>
               <p class="text-white mb-0"></p>
             </div>
             <span class="float-right display-5 opacity-5"
@@ -45,11 +17,39 @@
         </div>
       </div>
       <div class="col-lg-3 col-sm-6">
+        <div class="card gradient-2">
+          <div class="card-body">
+            <h3 class="card-title text-white">Kelas</h3>
+            <div class="d-inline-block">
+              <h1 class="text-white">{{ kelas }}</h1>
+              <p class="text-white mb-0"></p>
+            </div>
+            <span class="float-right display-5 opacity-5"
+              ><i class="fa fa-school"></i
+            ></span>
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-3 col-sm-6">
+        <div class="card gradient-3">
+          <div class="card-body">
+            <h3 class="card-title text-white">Petugas</h3>
+            <div class="d-inline-block">
+              <h1 class="text-white">{{ petugas }}</h1>
+              <p class="text-white mb-0"></p>
+            </div>
+            <span class="float-right display-5 opacity-5"
+              ><i class="fa fa-user"></i
+            ></span>
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-3 col-sm-6">
         <div class="card gradient-4">
           <div class="card-body">
-            <h3 class="card-title text-white">Total Pelanggaran</h3>
+            <h3 class="card-title text-white">Total Pembayaran</h3>
             <div class="d-inline-block">
-              <h1 class="text-white">{{ totalpln }}</h1>
+              <h1 class="text-white">{{ pembayaran }}</h1>
               <p class="text-white mb-0"></p>
             </div>
             <span class="float-right display-5 opacity-5"
@@ -63,7 +63,7 @@
       <div class="col-lg-6">
         <div class="card">
           <div class="card-body">
-            <h4 class="card-title mb-3">Persentase Kategori Pelanggaran</h4>
+            <h4 class="card-title mb-3">Persentase Pembayaran</h4>
             <div id="flotPie1" class="flot-chart"></div>
           </div>
         </div>
@@ -84,19 +84,24 @@
   /**************** PIE CHART *******************/
   var piedata = [
     {
-      label: "Ringan",
-      data: ["{{ plnringan }}"],
+      label: "Siswa",
+      data: ["{{ siswa }}"],
       color: "#FF7F00",
     },
     {
-      label: "Sedang",
-      data: ["{{ plnsedang }}"],
+      label: "Kelas",
+      data: ["{{ kelas }}"],
       color: "#7571F9",
     },
     {
-      label: "Berat",
-      data: ["{{ plnberat }}"],
+      label: "Petugas",
+      data: ["{{ petugas }}"],
       color: "#ff5e5e",
+    },
+    {
+      label: "Pembayaran",
+      data: ["{{ pembayaran }}"],
+      color: "#ff5ccc",
     },
   ];
 
