--- a/siswa/templates/data/pembayaran.html
+++ b/siswa/templates/data/pembayaran.html
@@ -54,8 +54,8 @@
                   <tr>
                     <td>{{ forloop.counter }}</td>
                     <td>{{ pembayaran.nama }}</td>
-                    <td>Rp.{{ pembayaran.pembayaran }}</td>
-                    <td>Rp.{{ pembayaran.biaya }}</td>
+                    <td>{{ pembayaran.pembayaran }}</td>
+                    <td>{{ pembayaran.biaya }}</td>
                     <td>{{ pembayaran.kategori }}</td>
                     <td>{{ pembayaran.tanggal }}</td>
                     <td>{{ pembayaran.tahun }}</td>
