--- a/siswa/templates/data/formlaporan.html
+++ b/siswa/templates/data/formlaporan.html
@@ -26,35 +26,41 @@
                 </div>
             </div>
 
-            {% if pelanggaran is not None %}
+            {% if pembayaran is not None %}
             <div class="col-lg-12">
                 <div class="card">
                     <div class="card-body">
-                        <h4 class="card-title">Data Pelanggaran</h4>
+                        <h4 class="card-title">Data Pembayaran</h4>
                             {% comment %} <a id="btn" href="{% url 'export_xls'  %}" type="button" class="btn btn-success">Export excel</a> {% endcomment %}
                         <div class="table-responsive">
                             <table id="pelanggaran_table" class="table table-striped table-bordered zero-configuration">
                                 <thead>
                                     <tr>
                                         <th>No</th>
-                                        <th>Nama Santri</th>
-                                        <th>Nama Pelanggaran</th>
-                                        <th>Kategori</th>
-                                        <th>Tanggal Kejadian</th>
+                                        <th>Nama Siswa</th>
+                                        <th>NISN</th>
+                                        <th>Kelas</th>
+                                        <th>Pembayaran</th>
+                                        <th>Biaya</th>
+                                        <th>Kategori Pembayaran</th>
+                                        <th>Tanggal Pembayaran</th>
+                                        <th>Tahun</th>
                                         <th>Keterangan</th>
-                                        <th>Hukuman</th>
                                     </tr>
                                 </thead>
                                 <tbody>
-                                    {% for pln in pelanggaran %}
+                                    {% for pmb in pembayaran %}
                                     <tr>
                                         <td>{{ forloop.counter }}</td>
-                                        <td>{{ pln.nama_santri }}</td>
-                                        <td>{{ pln.nama_pelanggaran }}</td>
-                                        <td>{{ pln.kategory }}</td>
-                                        <td>{{ pln.kejadian }}</td>
-                                        <td>{{ pln.keterangan }}</td>
-                                        <td>{{ pln.hukuman }}</td>
+                                        <td>{{ pmb.nama }}</td>
+                                        <td>{{ pmb.nama.nisn }}</td>
+                                        <td>{{ pmb.nama.kelas }}</td>
+                                        <td>{{ pmb.pembayaran }}</td>
+                                        <td>{{ pmb.biaya }}</td>
+                                        <td>{{ pmb.kategori }}</td>
+                                        <td>{{ pmb.tanggal }}</td>
+                                        <td>{{ pmb.tahun }}</td>
+                                        <td>{{ pmb.keterangan }}</td>
                                     </tr>
                                     {% endfor %}
                                 </tbody>
