--- a/siswa/templates/data/beranda.html
+++ b/siswa/templates/data/beranda.html
@@ -53,7 +53,7 @@
               <p class="text-white mb-0"></p>
             </div>
             <span class="float-right display-5 opacity-5"
-              ><i class="fa fa-heart"></i
+              ><i class="fa fa-money"></i
             ></span>
           </div>
         </div>
