--- a/siswa/templates/data/pembayaran_form.html
+++ b/siswa/templates/data/pembayaran_form.html
@@ -3,35 +3,62 @@
 {% load crispy_forms_tags %}
 {% block content %}
 
+
 <div class="content-body">
-        <div class="page-wrapper">
-            <div class="container-fluid">
-                 <div class="col-12">
-                 <div class="card">
-                            <div class="card-body">
-                {% if messages %}
-                    {% for pesan  in messages  %}
-                        <div class="alert alert-{{ pesan.tags }}" align="center">
-                            <b>{{ pesan }}</b>
-                        </div>
-                    {% endfor %}
-                {% endif %}
-                            <form action="" method="POST">
-                            <div class="form-group">
-                            {% csrf_token %}
-                            {{form|crispy}}
-                            </div>
-                               <div class="border-top">
-                                    <div class="card-body">
-                                        <button type="submit" class="btn btn-primary">SIMPAN</button>
-                                    </div>
+    <div class="page-wrapper">
+        <div class="container-fluid">
+            <div class="col-12">
+                <div class="card">
+                    <div class="card-body">
+                        {% if messages %}
+                            {% for pesan in messages %}
+                                <div class="alert alert-{{ pesan.tags }}" align="center">
+                                    <b>{{ pesan }}</b>
                                 </div>
-                    
-                            </form>
-                        </div>
-                 </div>
+                            {% endfor %}
+                        {% endif %}
+                        <form action="" method="POST">
+                            <div class="form-group">
+                                {% csrf_token %}
+                                {{ form.media }}
+                                {{ form|crispy }}
+                                <script type="text/javascript">
+                                    jQuery(document).ready(function () {
+                                        jQuery("#id_nama").select2({
+                                            placeholder: "Select a student",
+                                            minimumInputLength: 2,
+                                            ajax: {
+                                                url: "{% url 'autocomplete' %}",
+                                                dataType: "json",
+                                                delay: 250,
+                                                data: function (params) {
+                                                    return {
+                                                        q: params.term,
+                                                        page: params.page,
+                                                    };
+                                                },
+                                                processResults: function (data, params) {
+                                                    return {
+                                                        results: data,
+                                                    };
+                                                },
+                                                cache: true,
+                                            },
+                                        });
+                                    });
+
+                                </script>
+                            </div>
+                            <div class="border-top">
+                                <div class="card-body">
+                                    <button type="submit" class="btn btn-primary">SIMPAN</button>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                </div>
             </div>
-</div>            
-
+        </div>
+    </div>
+</div>
 {% endblock content %}
-
