feat: update templates

--- a/siswa/templates/data/beranda.html
+++ b/siswa/templates/data/beranda.html
@@ -91,7 +91,7 @@
     {
       label: "LKS",
       data: ["{{ lks }}"],
-      color: "#7571F9",
+      color: "#2dce89",
     },
     {
       label: "Komputer",
