--- a/templates/base.html
+++ b/templates/base.html
@@ -48,7 +48,7 @@
 
   <body>
     <div id="main-wrapper">
-      <div class="nav-header">
+      <div class="nav-header bg-success">
         <div class="brand-logo">
           <a href="#">
             <b class="logo-abbr"
@@ -74,7 +74,7 @@
         </div>
       </div>
 
-      <div class="header bg-primary">
+      <div class="header bg-success">
         <div class="header-content clearfix">
           <div class="nav-control">
             <div class="hamburger">
