--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -22,7 +22,7 @@
             aria-expanded="false"
           >
             <i class="fa-solid fa-user"></i>
-            <span class="nav-text">Petugas</span>
+            <span class="nav-text">Admin</span>
           </a>
         </h4>
       </li>
@@ -34,7 +34,7 @@
             aria-expanded="false"
           >
             <i class="fa-solid fa-school"></i>
-            <span class="nav-text">Data Kelas</span>
+            <span class="nav-text">Posyandu</span>
           </a>
         </h4>
       </li>
@@ -46,24 +46,12 @@
             aria-expanded="false"
           >
             <i class="fa-solid fa-users"></i>
-            <span class="nav-text">Data Siswa</span>
+            <span class="nav-text">Data Anak</span>
           </a>
         </h4>
       </li>
 
-      <li>
-        <h4>
-          <a
-            class="nav-link {% if menu == 'pembayaran' %} active {% endif %}"
-            href="{% url 'pembayaran' %}"
-            aria-expanded="false"
-          >
-            <i class="fa-solid fa-money-bill"></i>
-            <span class="nav-text">Pembayaran</span>
-          </a>
-        </h4>
-      </li>
-
+    
       <li>
         <h4>
           <a
