--- a/templates/baseuser.html
+++ b/templates/baseuser.html
@@ -70,7 +70,7 @@
         <!--**********************************
             Header start
         ***********************************-->
-        <div class="header bg-primary">    
+        <div class="header bg-success">    
             <div class="header-content clearfix">
                 
                 <div class="nav-control">
