feat: update assets

--- a/siswa/templates/data/login.html
+++ b/siswa/templates/data/login.html
@@ -44,7 +44,7 @@
       class="login-form-bg h-100"
       style="
         background-size: cover;
-        background-image: url('{% static 'public/images/sekolas.jpeg' %}')
+        background-image: url('{% static 'public/images/bg2.jpeg' %}')
       "
     >
       <div class="container h-100">
@@ -59,7 +59,7 @@
                   >
                     <span class="activity active"></span>
                     <img
-                      src="{% static 'public/images/logo.jpeg' %}"
+                      src="{% static 'public/images/logo.png' %}"
                       height="150"
                       width="150"
                       alt=""
