--- a/templates/base.html
+++ b/templates/base.html
@@ -11,7 +11,7 @@
       rel="icon"
       type="image/png"
       sizes="16x16"
-      href="{% static 'public/images/favicon.png' %}"
+      href="{% static 'public/images/logo.png' %}"
     />
     <!-- Pignose Calender -->
     <link
@@ -53,17 +53,17 @@
           <a href="#">
             <b class="logo-abbr"
               ><img
-                src="{% static 'public/images/logo.jpeg' %}"
+                src="{% static 'public/images/logo.png' %}"
                 width="80"
                 alt=""
               />
             </b>
             <span class="logo-compact"
-              ><img src="{% static 'public/images/logo.jpeg' %}" alt=""
+              ><img src="{% static 'public/images/logo.png' %}" alt=""
             /></span>
             <span class="brand-title">
               <img
-                src="{% static 'public/images/logo.jpeg' %}"
+                src="{% static 'public/images/logo.png' %}"
                 width="50px"
                 height="50px"
                 href="{% url 'beranda' %}"
@@ -96,7 +96,7 @@
               >
                 <span class="activity active"></span>
                 <img
-                  src="{% static 'public/images/user/1.png' %}"
+                  src="{% static 'public/images/user/2.png' %}"
                   height="40"
                   width="40"
                   alt=""
@@ -124,7 +124,7 @@
         class=""
         style="
           background-size: cover;
-          background-image: url('{% static 'public/images/sekolas.jpeg' %}');
+          background-image: url('{% static 'public/images/bg1.jpeg' %}');
         "
       >
         {% block content %} {% endblock content %}
