--- a/siswa/templates/data/beranda.html
+++ b/siswa/templates/data/beranda.html
@@ -59,24 +59,24 @@
         </div>
       </div> -->
     </div>
-    <!-- <div class="row">
+    <div class="row">
       <div class="col-lg-6">
         <div class="card">
           <div class="card-body">
-            <h4 class="card-title mb-3">Persentase Pembayaran</h4>
+            <h4 class="card-title mb-3">Persentase Stunting</h4>
             <div id="flotPie1" class="flot-chart"></div>
           </div>
         </div>
       </div>
-      <div class="col-lg-6">
+      <!-- <div class="col-lg-6">
         <div class="card">
           <div class="card-body">
             <h4 class="card-title mb-3"></h4>
             <div id="flotBar1" class="flot-chart"></div>
           </div>
         </div>
-      </div>
-    </div> -->
+      </div> -->
+    </div>
   </div>
 </div>
 {% endblock content %} {% block foto %}
@@ -84,19 +84,24 @@
   /**************** PIE CHART *******************/
   var piedata = [
     {
-      label: "KMS",
+      label: "Stunting",
       data: ["{{ kms }}"],
       color: "#FF7F00",
     },
     {
-      label: "LKS",
+      label: "Tidak Stunting",
       data: ["{{ lks }}"],
       color: "#2dce89",
     },
     {
-      label: "Komputer",
+      label: "Teratasi",
       data: ["{{ komputer }}"],
       color: "#ff5e5e",
+    },
+    {
+      label: "Sedang Diatasi",
+      data: ["{{ komputers }}"],
+      color: "#ffbb00",
     },
   
   ];
