--- a/siswa/templates/data/petugas.html
+++ b/siswa/templates/data/petugas.html
@@ -15,7 +15,7 @@
                 <div class="card">
                     <div class="card-body">
                         <div class="card-title">
-                            <a href="{% url 'create_petugas' %}" type="button" class="btn btn-rounded btn-outline-secondary fa-fa fa-plus"> Tambah Petugas</a>
+                            <a href="{% url 'create_petugas' %}" type="button" class="btn btn-rounded btn-outline-secondary fa-fa fa-plus"> Tambah Admin</a>
                         </div>
                       
                         <div class="table-responsive">
@@ -24,7 +24,7 @@
                                     <tr>                 
                                         <th>No</th>
                                         <th>Username</th>
-                                        <th>Nama Petugas</th>
+                                        <th>Nama Admin</th>
                                         <th>No Telepon</th>
                                         <th>Status</th>
                                         <th>Delete</th>
