--- a/siswa/templates/data/petugas_form.html
+++ b/siswa/templates/data/petugas_form.html
@@ -11,16 +11,17 @@
         <div class="card">
           <div class="card-body">
             {% if messages %}
-                    {% for pesan  in messages  %}
-                        <div class="alert alert-{{ pesan.tags }}" align="center">
-                            <b>{{ pesan }}</b>
-                        </div>
-                    {% endfor %}
-                {% endif %}
+            {%for pesan in messages %}
+            <div class="alert alert-success alert-dismissible fade show">
+                <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span>
+                </button> {{ pesan }}
+            </div>
+            {% endfor %}
+            {% endif %}
             <form class="form-horizontal" action="" method="POST">
               {% csrf_token %}
               <div class="card-body">
-                <h3 class="card-title mb-4">Form Tambah Petugas</h3>
+                <h3 class="card-title mb-4">Form Tambah Admin</h3>
                 {{form|crispy}}
                 <div class="form-group mt-3">
                   <label>Username: </label>
