--- a/siswa/templates/data/siswa_form.html
+++ b/siswa/templates/data/siswa_form.html
@@ -9,13 +9,14 @@
                  <div class="col-12">
                  <div class="card">
                             <div class="card-body">
-                <!-- {% if messages %}
-                    {% for pesan  in messages  %}
-                        <div class="alert alert-{{ pesan.tags }}" align="center">
-                            <b>{{ pesan }}</b>
-                        </div>
-                    {% endfor %}
-                {% endif %} -->
+                                {% if messages %}
+                                {%for pesan in messages %}
+                                <div class="alert alert-success alert-dismissible fade show">
+                                    <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span>
+                                    </button> {{ pesan }}
+                                </div>
+                                {% endfor %}
+                                {% endif %}
                             <form action="" method="POST" enctype="multipart/form-data">
                             <div class="form-group">
                             {% csrf_token %}
