feat: update all

--- a/siswa/templates/data/pembayaran.html
+++ b/siswa/templates/data/pembayaran.html
@@ -54,7 +54,7 @@
                   <tr>
                     <td>{{ forloop.counter }}</td>
                     <td>{{ pembayaran.nama }}</td>
-                    <td>{{ pembayaran.pembayaran }}</td>
+                    <td>Rp.{{ pembayaran.pembayaran }}</td>
                     <td>{{ pembayaran.biaya }}</td>
                     <td>{{ pembayaran.kategori }}</td>
                     <td>{{ pembayaran.tanggal }}</td>
